fix: progress bar contrast issue on javascript

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,7 +280,7 @@ ul {
 }
 
 .progress-bar-yellow {
-    background-color: #ffb300;
+    background-color: #ff7700;
 }
 
 .progress-bar-lightblue {
@@ -292,7 +292,7 @@ ul {
 }
 
 .progress-bar-orange {
-    background-color: #ffb300;
+    background-color: #ff7700;
 }
 
 .progress-bar-green {
